--- a/.github/workflows/up.yml
+++ b/.github/workflows/up.yml
@@ -62,14 +62,14 @@ jobs:
           cp $GITHUB_WORKSPACE/README.md $GITHUB_WORKSPACE/${{matrix.target}}
         fi
         cd $GITHUB_WORKSPACE/${{matrix.target}}
-        if git status --porcelain | grep .; then
+        #if git status --porcelain | grep .; then
           git add .
           git commit -am "update $(date '+%Y-%m-%d %H:%M:%S')"
           git push --quiet "https://${{ secrets.ACCESS_TOKEN }}@github.com/loso3000/upop.git" HEAD:${{matrix.target}}
-        else
-          echo "nothing to commit"
-          exit 0
-        fi || exit 0
+        #else
+        #  echo "nothing to commit"
+        #  exit 0
+        #fi || exit 0
 
     - name: Delete workflow runs
       uses: Mattraks/delete-workflow-runs@main
